Update swagger-generator. Fix [doc] time reference from column based variables Add tests concerning swagger parser
